--- a/app/src/main/res/layout/activity_ghabz_search.xml
+++ b/app/src/main/res/layout/activity_ghabz_search.xml
@@ -544,7 +544,33 @@
             android:layout_width="320dp"
             android:layout_height="400dp"
             android:background="@drawable/btn_white"
-            android:visibility="invisible">
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/btn_back_more_info"
+                android:layout_width="110dp"
+                android:layout_height="41dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/btn_grey"
+                android:gravity="center"
+                android:onClick="clk_back_more_info"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.97">
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_back_complete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="برگشت"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <com.sputa.avarez.my_views.MyTextView
                 android:id="@+id/lbl_more_detail_title"
@@ -558,7 +584,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.04000002" />
+                app:layout_constraintVertical_bias="0.01999998" />
 
             <LinearLayout
                 android:id="@+id/lay_msg_more_detail"
@@ -571,7 +597,7 @@
                 app:layout_constraintHorizontal_bias="0.48"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.71000004">
+                app:layout_constraintVertical_bias="0.49">
 
                 <com.sputa.avarez.my_views.MyTextView
                     android:id="@+id/lbl_msg_right_detail"
