--- a/app/src/main/res/layout/activity_my_eshterak_list.xml
+++ b/app/src/main/res/layout/activity_my_eshterak_list.xml
@@ -54,14 +54,39 @@
         android:background="#a8404040"
         android:gravity="center"
         android:onClick="clk_msg"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/lay_more_detail"
             android:layout_width="320dp"
             android:layout_height="400dp"
             android:background="@drawable/btn_white"
-            android:visibility="invisible">
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/btn_back_detail"
+                android:layout_width="110dp"
+                android:layout_height="41dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/btn_grey"
+                android:gravity="center"
+                android:onClick="clk_back"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.96">
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_back_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="برگشت"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <com.sputa.avarez.my_views.MyTextView
                 android:id="@+id/lbl_more_detail_title"
@@ -87,8 +112,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.48"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.71000004">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.sputa.avarez.my_views.MyTextView
                     android:id="@+id/lbl_msg_right_detail"
