--- a/app/src/main/res/layout/list_cars_item.xml
+++ b/app/src/main/res/layout/list_cars_item.xml
@@ -38,6 +38,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.20999998">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".7"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_delete_icon"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                app:srcCompat="@android:drawable/ic_delete" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -47,7 +60,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageButton2"
+                android:id="@+id/img_car_icon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 app:srcCompat="@drawable/car" />
