--- a/app/src/main/res/layout/list_pay_item.xml
+++ b/app/src/main/res/layout/list_pay_item.xml
@@ -22,80 +22,108 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.20999998">
 
-        <com.sputa.avarez.my_views.MyTextView
-            android:id="@+id/txt_year"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:background="@drawable/border_back"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text="سال عوارض"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
 
-        <com.sputa.avarez.my_views.MyTextView
-            android:id="@+id/txt_avarez"
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_year"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="سال عوارض"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:background="@drawable/border_back"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text="مبلغ عوارض"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
 
-        <com.sputa.avarez.my_views.MyTextView
-            android:id="@+id/txt_farsudegi"
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_avarez"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="مبلغ عوارض"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:background="@drawable/border_back"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text=" فرسودگی"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
 
-        <com.sputa.avarez.my_views.MyTextView
-            android:id="@+id/txt_rate_punish"
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_farsudegi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text=" فرسودگی"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:background="@drawable/border_back"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text="نرخ جریمه"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
 
-        <com.sputa.avarez.my_views.MyTextView
-            android:id="@+id/txt_punish"
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_rate_punish"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="نرخ جریمه"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:background="@drawable/border_back"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text="جریمه دیرکرد"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
+
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_punish"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="جریمه دیرکرد"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
