--- a/app/src/main/res/menu/activity_drawer_test_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_test_drawer.xml
@@ -17,6 +17,11 @@
             android:icon="@drawable/abone"
             android:title="اشتراک های من" />
         <item
+            android:id="@+id/nav_pay_history"
+            android:icon="@drawable/abone"
+            android:title="سوابق پرداخت" />
+
+        <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/message"
             android:title="تازه ها" />
