--- a/app/src/main/res/layout/list_pay_history.xml
+++ b/app/src/main/res/layout/list_pay_history.xml
@@ -38,6 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.20999998">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -46,29 +47,16 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/img_delete_eshterak"
+                android:id="@+id/img_car_icon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                app:srcCompat="@android:drawable/ic_delete" />
+                app:srcCompat="@drawable/car" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".7"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_icon"
-                android:layout_width="45dp"
-                android:layout_height="45dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3.2"
+            android:layout_weight="3.6"
             android:orientation="vertical">
 
             <LinearLayout
@@ -108,7 +96,7 @@
                     android:orientation="horizontal">
 
                     <com.sputa.avarez.my_views.MyTextView
-                        android:id="@+id/txt_eshterak"
+                        android:id="@+id/txt_pelak"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="0dp"
@@ -135,6 +123,26 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <com.sputa.avarez.my_views.MyTextView
+                        android:id="@+id/txt_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="0dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:padding="0dp"
+                        android:text="جریمه دیرکرد"
+                        android:textColor="#ff3535"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:gravity="bottom|end"
                     android:orientation="horizontal">
 
@@ -153,20 +161,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".7"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_detail"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                app:srcCompat="@drawable/detail_128" />
         </LinearLayout>
 
     </LinearLayout>
